web_static/styles/8-places.css
.places {
    background-color: white;
    height: auto;
    width: 100%;
    border-radius: 4px;
    display: flex;
    align-items: center;
}

.places h1 {
    font-size: 30px;
    margin-bottom: 830px;
    margin-left: 15px;
    display: block;
}

.places h2 {
    position: relative;
    top: -30px;
}

.places article > div:nth-child(1),
.places article > div:nth-child(2),
.places article > div:nth-child(3) {
    width: 360px;
    height: 300px;
    padding: 20px;
    margin: 20px;
    border: 1px solid #FF5A5F;
    border-radius: 4px;
    font-size: 30px;
    text-align: center;
    margin-left: -70px;
    display: inline-block;
    margin-right: 80px;
}

.places article > div:nth-child(1) {
    position: relative;
    left: 6px;
}

.places article > div:nth-child(2) {
    position: relative;
    left: 70px
}

.places article > div:nth-child(3) {
    position: relative;
    left: 250px;
}

.places article h2:nth-child(1) {
    align-items: right;
    font-size: 30px;
}

.places article h2:nth-child(2) {
    align-items: left;
    font-size: 30px;
}

.places article h2:nth-child(3) {
    align-items: left;
    font-size: 30px;
}

.price_by_night {
    color: #FF5A5F;
    border: 4px solid #FF5A5F;
    border-radius: 50px;
    width: 60px;
    height: 60px;
    font-size: 30px;
    margin-top: -80px;
    margin-bottom: 10px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    float: right;
}

.information {
    height:65px;
    border-top: 1px solid #DDDDDD;
    border-bottom: 1px solid #DDDDDD;
    font-size: 10px;
    display: flex;
}

.max_guest,
.number_rooms,
.number_bathrooms {
    width: 100px;
    height: 60px;
    font-size: 10px;
    background-position: top;
    background-repeat: no-repeat;
    margin-left: auto;
    display: flex;
    align-items: flex-end;
    justify-content: center;
}

.max_guest {
    background-image: url("../images/icon_group.png");
    margin-right: -40px;
}

.number_rooms {
    background-image: url("../images/icon_bed.png");
    margin-right: -40px;
}

.number_bathrooms {
    background-image: url("../images/icon_bath.png");
    margin-right: 45px;
}

.places p {
    margin-top: 0px;
    margin-bottom: 0px;
    font-size: 10px;
}

.user,
.description {
    font-size: 10px;
    text-align: left;
}

.user {
    margin-top: 15px;
    margin-bottom: 5px;
}

